<resources>
    <string name="app_name">fJobs</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="estimatedWorkTime">Estimated Work Time</string>
    <string name="createdDate">Available From</string>
    <string name="endDate">Expires On</string>
    <string name="reward">Enter a reward for job completion</string>
    <string name="reward2">Reward</string>
    <string name="save">Save</string>
    <string name="difficulty">Difficulty</string>
    <string name="apply">Apply</string>
    <string name="employer">Employer Profile</string>
    <string name="studentList">List of Aplicants</string>

    <string name="contact_details">Contact Details</string>
    <string name="student_phone">Phone</string>
    <string name="student_email">Email</string>
    <string name="personal_details">Personal Details</string>
    <string name="student_city">City</string>
    <string name="student_age">Age</string>
    <string name="student_skills">Skills</string>
    <string name="student_gender">Gender</string>
    <string name="appliedjobs_button">Applied Jobs</string>
    <string name="student_name">Student Name</string>

    <string name="student_item_age">Age: %d</string>
    <string name="student_item_city">City: %d</string>
    <string name="student_item_gender">Gender: %s</string>

    <string name="employer_name">Employer Name</string>
    <string name="employer_city">City</string>
    <string name="employer_address">Address</string>
    <string name="employer_gender">Gender</string>
    <string name="employer_phone">Phone</string>
    <string name="employer_email">Email</string>

    <string name="job_list_difficulty">Difficulty: %s</string>
    <string name="job_list_reward">Reward: %s</string>
    <string name="job_list_est_work_time">Estimated work time: %d hours</string>
    <string name="job_list_dismiss">DISMISS</string>
    <string name="job_list_apply">APPLY</string>
    <string name="job_list_title">Available Jobs</string>
    <string name="create_job_title">Create Job</string>
    <string name="list_of_applicans_title">Applicants</string>
</resources>
