<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <ImageView
                android:id="@+id/employer_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/job_image_placeholder" />

            <TextView
                android:id="@+id/smployer_name"
                style="@style/JobListTitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/semitransparent_black"
                android:gravity="center_vertical"
                android:padding="@dimen/activity_general_margin"
                android:text="@string/employer_name" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

           <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/contact_details"
                android:gravity="center_horizontal"
                style="@style/StudentSubtitleTextStyle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/employer_phone"
                android:text="@string/employer_phone"
                android:layout_margin="3dp"
                android:layout_marginTop="5dp"
                style="@style/JobListDescriptionTextStyle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/employer_email"
                android:text="@string/employer_email"
                android:layout_margin="3dp"
                android:layout_marginTop="5dp"
                style="@style/JobListDescriptionTextStyle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/personal_details"
                android:gravity="center_horizontal"
                style="@style/StudentSubtitleTextStyle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/employer_city"
                android:text="@string/employer_city"
                android:layout_margin="3dp"
                android:layout_marginTop="5dp"
                style="@style/JobListDescriptionTextStyle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/employer_age"
                android:text="@string/employer_age"
                android:layout_margin="3dp"
                android:layout_marginTop="5dp"
                style="@style/JobListDescriptionTextStyle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/employer_gender"
                android:text="@string/employer_gender"
                android:layout_margin="3dp"
                android:layout_marginTop="5dp"
                style="@style/JobListDescriptionTextStyle"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>