<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_general_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_general_margin"
        android:layout_marginRight="@dimen/activity_general_margin"
        android:layout_marginTop="@dimen/activity_general_margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/title_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_general_margin"
            android:hint="@string/title"
            android:paddingBottom="@dimen/activity_general_margin_8dp"
            android:paddingTop="@dimen/activity_general_margin">

            <EditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/description_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_general_margin"
            android:hint="@string/description"
            android:paddingBottom="@dimen/activity_general_margin_8dp">

            <EditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/city_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_general_margin_half"
            android:hint="@string/city"
            android:paddingBottom="@dimen/activity_general_margin_8dp">

            <EditText
                android:id="@+id/city_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:drawablePadding="@dimen/activity_general_margin_half"
                android:drawableRight="@drawable/ic_location"
                android:focusable="false"
                android:inputType="none"
                android:text="Cluj-Napoca" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_general_margin"
            android:hint="@string/address"
            android:paddingBottom="@dimen/activity_general_margin_8dp">

            <EditText
                android:id="@+id/address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/activity_general_margin_half"
                android:drawableRight="@drawable/ic_address"
                android:inputType="textCapSentences|textPostalAddress" />

        </android.support.design.widget.TextInputLayout>

        <!--<Spinner-->
        <!--android:id="@+id/hoursSpinner"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="@dimen/activity_general_margin"-->
        <!--android:entries="@array/hoursSpinnerItems"-->
        <!--android:foregroundGravity="center_vertical"-->
        <!--android:paddingBottom="@dimen/activity_general_margin_8dp"-->
        <!--android:spinnerMode="dropdown" />-->

        <EditText
            android:id="@+id/startDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_calendar"
            android:drawablePadding="@dimen/activity_general_margin_8dp"
            android:drawableRight="@drawable/ic_drop_down"
            android:focusable="false"
            android:hint="@string/createdDate"
            android:inputType="date"
            android:paddingBottom="@dimen/activity_general_margin" />

        <EditText
            android:id="@+id/endDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_calendar"
            android:drawablePadding="@dimen/activity_general_margin_8dp"
            android:drawableRight="@drawable/ic_drop_down"
            android:focusable="false"
            android:hint="@string/endDate"
            android:layout_marginBottom="@dimen/activity_general_margin"
            android:inputType="date"
            android:paddingBottom="@dimen/activity_general_margin" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/difficulty_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/difficulty"
            android:layout_marginBottom="@dimen/activity_general_margin"
            android:paddingBottom="@dimen/activity_general_margin_8dp">

            <EditText
                android:id="@+id/difficulty_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/activity_general_margin_half"
                android:drawableRight="@drawable/ic_drop_down"
                android:clickable="false"
                android:focusable="false"
                android:inputType="none" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/estimated_work_time_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_general_margin"
            android:hint="@string/estimatedWorkTime"
            android:paddingBottom="@dimen/activity_general_margin_8dp">

            <EditText
                android:id="@+id/estimated_work_time_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/activity_general_margin_half"
                android:drawableRight="@drawable/ic_drop_down"
                android:clickable="false"
                android:focusable="false"
                android:inputType="none" />

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/reward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_general_margin"
            android:layout_marginTop="@dimen/activity_general_margin"
            android:hint="@string/reward" />


        <Button
            android:id="@+id/save_button"
            style="@style/JobListTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_general_margin"
            android:layout_marginTop="@dimen/activity_general_margin_20dp"
            android:background="@color/colorPrimary"
            android:padding="@dimen/activity_general_margin"
            android:text="@string/save"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>